# railrobot

./: .gitignore  .gitmodules  huggingface2aliyun.ipynb
src/orbbec_camera_node/: CMakeLists.txt  package.xml
src/orbbec_camera_node/launch/: camera_component.launch.py  intra_process_launch.py
src/orbbec_camera_node/launch/includes/: camera_base.launch.py
src/orbbec_camera_node/launch/params/: camera_params.yaml
src/orbbec_camera_node/plugins/: nodelet_plugins.xml
src/orbbec_camera_node/src/: orbbec_camera_node.cpp
src/rail_robot_inspection/: package.xml  pyproject.toml  requirements.txt  setup.cfg  setup.py  structure.txt
src/rail_robot_inspection/config/: config.yaml
src/rail_robot_inspection/launch/: robot_inspection.launch.py
src/rail_robot_inspection/tests/: test_rail_control_node.py
src/rail_robot_inspection_msgs/: CMakeLists.txt  package.xml
src/rail_robot_inspection_msgs/msg/: RailPosition.msg  SensorData.msg
src/rail_robot_inspection_msgs/srv/: InspectionData.srv
